fixed: imperium to update strategic agents Arc<Mutex<SchedulingEnvironment>>

--- a/imperium/scripts/strategic/resource_configurations/low_resources.toml
+++ b/imperium/scripts/strategic/resource_configurations/low_resources.toml
@@ -1,3 +1,9 @@
+[[supervisors]]
+id = "main"
+number_of_supervisor_periods = 3
+
+# [[supervisors]]
+# id = "supervisor-second"
 ################################
 ###          MTN-ELEC        ###
 ################################
@@ -8,8 +14,8 @@ hours_per_day = 6.0
 operational_configuration.shift_interval = [07:00:00, 19:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
+operational_configuration.availability.start_date = 2024-11-18T07:00:00Z
+operational_configuration.availability.end_date = 2024-12-01T15:00:00Z
 
 [[operational]]
 id = "OP-01-002"
@@ -18,18 +24,8 @@ hours_per_day = 6.0
 operational_configuration.shift_interval = [07:00:00, 19:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
-
-[[operational]]
-id = "OP-01-003"
-resources.resources = [ "MTN-ELEC" ]
-hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
-operational_configuration.break_interval = [11:00:00, 12:00:00]
-operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
+operational_configuration.availability.start_date = 2024-11-18T07:00:00Z
+operational_configuration.availability.end_date = 2024-12-01T15:00:00Z
 
 
 ################################
@@ -42,8 +38,8 @@ hours_per_day = 6.0
 operational_configuration.shift_interval = [07:00:00, 19:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
+operational_configuration.availability.start_date = 2024-11-18T07:00:00Z
+operational_configuration.availability.end_date = 2024-12-01T15:00:00Z
 
 [[operational]]
 id = "OP-02-002"
@@ -52,8 +48,8 @@ hours_per_day = 6.0
 operational_configuration.shift_interval = [07:00:00, 19:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
+operational_configuration.availability.start_date = 2024-11-18T07:00:00Z
+operational_configuration.availability.end_date = 2024-12-01T15:00:00Z
 
 ################################
 ###          MTN-MECH        ###
@@ -65,8 +61,8 @@ hours_per_day = 6.0
 operational_configuration.shift_interval = [07:00:00, 19:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
+operational_configuration.availability.start_date = 2024-11-18T07:00:00Z
+operational_configuration.availability.end_date = 2024-12-01T15:00:00Z
 
 [[operational]]
 id = "OP-02-002"
@@ -75,18 +71,8 @@ hours_per_day = 6.0
 operational_configuration.shift_interval = [07:00:00, 19:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
-
-[[operational]]
-id = "OP-02-003"
-resources.resources = [ "MTN-MECH" ]
-hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
-operational_configuration.break_interval = [11:00:00, 12:00:00]
-operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
+operational_configuration.availability.start_date = 2024-11-18T07:00:00Z
+operational_configuration.availability.end_date = 2024-12-01T15:00:00Z
 
 
 ################################
@@ -99,8 +85,8 @@ hours_per_day = 6.0
 operational_configuration.shift_interval = [07:00:00, 19:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
+operational_configuration.availability.start_date = 2024-11-18T07:00:00Z
+operational_configuration.availability.end_date = 2024-12-01T15:00:00Z
 
 [[operational]]
 id = "OP-03-002"
@@ -109,8 +95,8 @@ hours_per_day = 6.0
 operational_configuration.shift_interval = [07:00:00, 19:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
+operational_configuration.availability.start_date = 2024-11-18T07:00:00Z
+operational_configuration.availability.end_date = 2024-12-01T15:00:00Z
 
 
 ################################
@@ -123,18 +109,9 @@ hours_per_day = 6.0
 operational_configuration.shift_interval = [07:00:00, 19:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
+operational_configuration.availability.start_date = 2024-11-18T07:00:00Z
+operational_configuration.availability.end_date = 2024-12-01T15:00:00Z
 
-[[operational]]
-id = "OP-03-002"
-resources.resources = [ "MTN-TELE"]
-hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
-operational_configuration.break_interval = [11:00:00, 12:00:00]
-operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
 
 ################################
 ###          MTN-ROUS        ###
@@ -146,8 +123,8 @@ hours_per_day = 6.0
 operational_configuration.shift_interval = [07:00:00, 19:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
+operational_configuration.availability.start_date = 2024-11-18T07:00:00Z
+operational_configuration.availability.end_date = 2024-12-01T15:00:00Z
 
 [[operational]]
 id = "OP-04-002"
@@ -156,8 +133,8 @@ hours_per_day = 6.0
 operational_configuration.shift_interval = [07:00:00, 19:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
+operational_configuration.availability.start_date = 2024-11-18T07:00:00Z
+operational_configuration.availability.end_date = 2024-12-01T15:00:00Z
 
 
 ################################
@@ -170,8 +147,8 @@ hours_per_day = 6.0
 operational_configuration.shift_interval = [07:00:00, 19:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
+operational_configuration.availability.start_date = 2024-11-18T07:00:00Z
+operational_configuration.availability.end_date = 2024-12-01T15:00:00Z
 
 ################################
 ###          MTN-LAGG        ###
@@ -183,8 +160,8 @@ hours_per_day = 6.0
 operational_configuration.shift_interval = [07:00:00, 19:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
+operational_configuration.availability.start_date = 2024-11-18T07:00:00Z
+operational_configuration.availability.end_date = 2024-12-01T15:00:00Z
 
 
 ################################
@@ -197,17 +174,8 @@ hours_per_day = 6.0
 operational_configuration.shift_interval = [07:00:00, 19:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
-[[operational]]
-id = "OP-06-002"
-resources.resources = [ "MTN-PAIN"]
-hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
-operational_configuration.break_interval = [11:00:00, 12:00:00]
-operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
+operational_configuration.availability.start_date = 2024-11-18T07:00:00Z
+operational_configuration.availability.end_date = 2024-12-01T15:00:00Z
 
 ################################
 ###          MTN-PIPF        ###
@@ -219,8 +187,8 @@ hours_per_day = 6.0
 operational_configuration.shift_interval = [07:00:00, 19:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
+operational_configuration.availability.start_date = 2024-11-18T07:00:00Z
+operational_configuration.availability.end_date = 2024-12-01T15:00:00Z
 [[operational]]
 id = "OP-07-002"
 resources.resources = [ "MTN-PIPF"]
@@ -228,17 +196,8 @@ hours_per_day = 6.0
 operational_configuration.shift_interval = [07:00:00, 19:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
-[[operational]]
-id = "OP-07-003"
-resources.resources = [ "MTN-PIPF"]
-hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
-operational_configuration.break_interval = [11:00:00, 12:00:00]
-operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
+operational_configuration.availability.start_date = 2024-11-18T07:00:00Z
+operational_configuration.availability.end_date = 2024-12-01T15:00:00Z
 
 ################################
 ###          MTN-ROPE        ###
@@ -250,8 +209,8 @@ hours_per_day = 6.0
 operational_configuration.shift_interval = [07:00:00, 19:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
+operational_configuration.availability.start_date = 2024-11-18T07:00:00Z
+operational_configuration.availability.end_date = 2024-12-01T15:00:00Z
 [[operational]]
 id = "OP-08-002"
 resources.resources = [ "MTN-ROPE"]
@@ -259,17 +218,8 @@ hours_per_day = 6.0
 operational_configuration.shift_interval = [07:00:00, 19:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
-[[operational]]
-id = "OP-08-003"
-resources.resources = [ "MTN-ROPE"]
-hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
-operational_configuration.break_interval = [11:00:00, 12:00:00]
-operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
+operational_configuration.availability.start_date = 2024-11-18T07:00:00Z
+operational_configuration.availability.end_date = 2024-12-01T15:00:00Z
 
 ################################
 ###          MTN-SCAF        ###
@@ -281,8 +231,8 @@ hours_per_day = 6.0
 operational_configuration.shift_interval = [07:00:00, 19:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
+operational_configuration.availability.start_date = 2024-11-18T07:00:00Z
+operational_configuration.availability.end_date = 2024-12-01T15:00:00Z
 [[operational]]
 id = "OP-09-002"
 resources.resources = [ "MTN-SCAF"]
@@ -290,17 +240,8 @@ hours_per_day = 6.0
 operational_configuration.shift_interval = [07:00:00, 19:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
-[[operational]]
-id = "OP-09-003"
-resources.resources = [ "MTN-SCAF"]
-hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
-operational_configuration.break_interval = [11:00:00, 12:00:00]
-operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
+operational_configuration.availability.start_date = 2024-11-18T07:00:00Z
+operational_configuration.availability.end_date = 2024-12-01T15:00:00Z
 
 ################################
 ###          INP-SITE        ###
@@ -312,8 +253,8 @@ hours_per_day = 6.0
 operational_configuration.shift_interval = [07:00:00, 19:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
+operational_configuration.availability.start_date = 2024-11-18T07:00:00Z
+operational_configuration.availability.end_date = 2024-12-01T15:00:00Z
 [[operational]]
 id = "OP-10-002"
 resources.resources = [ "INP-SITE"]
@@ -321,8 +262,8 @@ hours_per_day = 6.0
 operational_configuration.shift_interval = [07:00:00, 19:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
+operational_configuration.availability.start_date = 2024-11-18T07:00:00Z
+operational_configuration.availability.end_date = 2024-12-01T15:00:00Z
 
 ################################
 ###          PRODTECH        ###
@@ -334,8 +275,8 @@ hours_per_day = 6.0
 operational_configuration.shift_interval = [07:00:00, 19:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
+operational_configuration.availability.start_date = 2024-11-18T07:00:00Z
+operational_configuration.availability.end_date = 2024-12-01T15:00:00Z
 [[operational]]
 id = "OP-11-002"
 resources.resources = [ "PRODTECH"]
@@ -343,8 +284,8 @@ hours_per_day = 6.0
 operational_configuration.shift_interval = [07:00:00, 19:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
+operational_configuration.availability.start_date = 2024-11-18T07:00:00Z
+operational_configuration.availability.end_date = 2024-12-01T15:00:00Z
 [[operational]]
 id = "OP-11-003"
 resources.resources = [ "PRODTECH"]
@@ -352,17 +293,8 @@ hours_per_day = 6.0
 operational_configuration.shift_interval = [07:00:00, 19:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
-[[operational]]
-id = "OP-11-004"
-resources.resources = [ "PRODTECH"]
-hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
-operational_configuration.break_interval = [11:00:00, 12:00:00]
-operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
-operational_configuration.availability.start_date = 2024-05-16T07:00:00Z
-operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
+operational_configuration.availability.start_date = 2024-11-18T07:00:00Z
+operational_configuration.availability.end_date = 2024-12-01T15:00:00Z
 
 # mtnelec = 3.5
 # mtninst = 2.5
@@ -398,3 +330,5 @@ operational_configuration.availability.end_date = 2024-05-30T15:00:00Z
 # qaqcmech = 0.0
 # qaqcpain = 0.0
 # wellsupv = 0.0
+
+
