--- a/imperium/scripts/strategic/resource_configurations/low_resources.toml
+++ b/imperium/scripts/strategic/resource_configurations/low_resources.toml
@@ -11,7 +11,7 @@ number_of_supervisor_periods = 3
 id = "OP-01-001"
 resources.resources = ["MTN-ELEC" ]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-12-02T07:00:00Z
@@ -21,7 +21,7 @@ operational_configuration.availability.end_date = 2024-12-15T15:00:00Z
 id = "OP-01-002"
 resources.resources = [ "MTN-ELEC" ]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-12-02T07:00:00Z
@@ -35,7 +35,7 @@ operational_configuration.availability.end_date = 2024-12-15T15:00:00Z
 id = "OP-02-001"
 resources.resources = [ "MTN-INST" ]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-12-02T07:00:00Z
@@ -45,7 +45,7 @@ operational_configuration.availability.end_date = 2024-12-15T15:00:00Z
 id = "OP-02-002"
 resources.resources = [ "MTN-INST" ]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-12-02T07:00:00Z
@@ -58,7 +58,7 @@ operational_configuration.availability.end_date = 2024-12-15T15:00:00Z
 id = "OP-02-001"
 resources.resources = [ "MTN-MECH" ]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-12-02T07:00:00Z
@@ -68,7 +68,7 @@ operational_configuration.availability.end_date = 2024-12-15T15:00:00Z
 id = "OP-02-002"
 resources.resources = [ "MTN-MECH" ]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-12-02T07:00:00Z
@@ -82,7 +82,7 @@ operational_configuration.availability.end_date = 2024-12-15T15:00:00Z
 id = "OP-03-001"
 resources.resources = [ "MTN-TURB"]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-12-02T07:00:00Z
@@ -92,7 +92,7 @@ operational_configuration.availability.end_date = 2024-12-15T15:00:00Z
 id = "OP-03-002"
 resources.resources = [ "MTN-TURB"]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-12-02T07:00:00Z
@@ -106,7 +106,7 @@ operational_configuration.availability.end_date = 2024-12-15T15:00:00Z
 id = "OP-03-001"
 resources.resources = [ "MTN-TELE"]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-12-02T07:00:00Z
@@ -120,7 +120,7 @@ operational_configuration.availability.end_date = 2024-12-15T15:00:00Z
 id = "OP-04-001"
 resources.resources = [ "MTN-ROUS"]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-12-02T07:00:00Z
@@ -130,7 +130,7 @@ operational_configuration.availability.end_date = 2024-12-15T15:00:00Z
 id = "OP-04-002"
 resources.resources = [ "MTN-ROUS"]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-12-02T07:00:00Z
@@ -144,7 +144,7 @@ operational_configuration.availability.end_date = 2024-12-15T15:00:00Z
 id = "OP-05-001"
 resources.resources = [ "MEDIC" ]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-12-02T07:00:00Z
@@ -157,7 +157,7 @@ operational_configuration.availability.end_date = 2024-12-15T15:00:00Z
 id = "OP-05-001"
 resources.resources = [ "MTN-LAGG"]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-12-02T07:00:00Z
@@ -171,7 +171,7 @@ operational_configuration.availability.end_date = 2024-12-15T15:00:00Z
 id = "OP-06-001"
 resources.resources = [ "MTN-PAIN"]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-12-02T07:00:00Z
@@ -184,7 +184,7 @@ operational_configuration.availability.end_date = 2024-12-15T15:00:00Z
 id = "OP-07-001"
 resources.resources = [ "MTN-PIPF"]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-12-02T07:00:00Z
@@ -193,7 +193,7 @@ operational_configuration.availability.end_date = 2024-12-15T15:00:00Z
 id = "OP-07-002"
 resources.resources = [ "MTN-PIPF"]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-12-02T07:00:00Z
@@ -206,7 +206,7 @@ operational_configuration.availability.end_date = 2024-12-15T15:00:00Z
 id = "OP-08-001"
 resources.resources = [ "MTN-ROPE"]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-12-02T07:00:00Z
@@ -215,7 +215,7 @@ operational_configuration.availability.end_date = 2024-12-15T15:00:00Z
 id = "OP-08-002"
 resources.resources = [ "MTN-ROPE"]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-12-02T07:00:00Z
@@ -228,7 +228,7 @@ operational_configuration.availability.end_date = 2024-12-15T15:00:00Z
 id = "OP-09-001"
 resources.resources = [ "MTN-SCAF"]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-12-02T07:00:00Z
@@ -237,7 +237,7 @@ operational_configuration.availability.end_date = 2024-12-15T15:00:00Z
 id = "OP-09-002"
 resources.resources = [ "MTN-SCAF"]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-12-02T07:00:00Z
@@ -250,7 +250,7 @@ operational_configuration.availability.end_date = 2024-12-15T15:00:00Z
 id = "OP-10-001"
 resources.resources = [ "INP-SITE"]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-12-02T07:00:00Z
@@ -259,7 +259,7 @@ operational_configuration.availability.end_date = 2024-12-15T15:00:00Z
 id = "OP-10-002"
 resources.resources = [ "INP-SITE"]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-12-02T07:00:00Z
@@ -272,7 +272,7 @@ operational_configuration.availability.end_date = 2024-12-15T15:00:00Z
 id = "OP-11-001"
 resources.resources = [ "PRODTECH"]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-12-02T07:00:00Z
@@ -281,7 +281,7 @@ operational_configuration.availability.end_date = 2024-12-15T15:00:00Z
 id = "OP-11-002"
 resources.resources = [ "PRODTECH"]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-12-02T07:00:00Z
@@ -290,7 +290,7 @@ operational_configuration.availability.end_date = 2024-12-15T15:00:00Z
 id = "OP-11-003"
 resources.resources = [ "PRODTECH"]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-12-02T07:00:00Z
