--- a/configuration/resources_te.toml
+++ b/configuration/resources_te.toml
@@ -10,7 +10,7 @@ number_of_supervisor_periods = 3
 id = "OP-01-001"
 resources.resources = ["MTN-ELEC" ]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -20,7 +20,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 id = "OP-01-002"
 resources.resources = [ "MTN-ELEC" ]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -33,7 +33,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 id = "OP-02-001"
 resources.resources = [ "MTN-INST" ]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -43,7 +43,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 id = "OP-02-002"
 resources.resources = [ "MTN-INST" ]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -56,7 +56,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 id = "OP-02-001"
 resources.resources = [ "MTN-MECH" ]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -66,7 +66,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 id = "OP-02-002"
 resources.resources = [ "MTN-MECH" ]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -79,7 +79,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 id = "OP-03-001"
 resources.resources = [ "MTN-TURB"]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -92,7 +92,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 id = "OP-03-001"
 resources.resources = [ "MTN-TELE"]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -105,7 +105,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 id = "OP-04-001"
 resources.resources = [ "MTN-ROUS"]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -115,7 +115,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 id = "OP-04-002"
 resources.resources = [ "MTN-ROUS"]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -125,7 +125,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 id = "OP-04-003"
 resources.resources = [ "MTN-ROUS"]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -135,7 +135,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 id = "OP-04-004"
 resources.resources = [ "MTN-ROUS"]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -148,7 +148,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 id = "OP-05-001"
 resources.resources = [ "MEDIC" ]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -161,7 +161,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 id = "OP-05-001"
 resources.resources = [ "MTN-LAGG"]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -171,7 +171,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 id = "OP-05-002"
 resources.resources = [ "MTN-LAGG"]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -184,7 +184,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 # id = "OP-06-001"
 # resources.resources = [ "MTN-PAIN"]
 # hours_per_day = 6.0
-# operational_configuration.shift_interval = [07:00:00, 19:00:00]
+# operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 # operational_configuration.break_interval = [11:00:00, 12:00:00]
 # operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 # operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -197,7 +197,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 # id = "OP-07-001"
 # resources.resources = [ "MTN-PIPF"]
 # hours_per_day = 6.0
-# operational_configuration.shift_interval = [07:00:00, 19:00:00]
+# operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 # operational_configuration.break_interval = [11:00:00, 12:00:00]
 # operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 # operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -206,7 +206,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 # id = "OP-07-002"
 # resources.resources = [ "MTN-PIPF"]
 # hours_per_day = 6.0
-# operational_configuration.shift_interval = [07:00:00, 19:00:00]
+# operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 # operational_configuration.break_interval = [11:00:00, 12:00:00]
 # operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 # operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -215,7 +215,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 # id = "OP-07-003"
 # resources.resources = [ "MTN-PIPF"]
 # hours_per_day = 6.0
-# operational_configuration.shift_interval = [07:00:00, 19:00:00]
+# operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 # operational_configuration.break_interval = [11:00:00, 12:00:00]
 # operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 # operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -224,7 +224,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 # id = "OP-07-004"
 # resources.resources = [ "MTN-PIPF"]
 # hours_per_day = 6.0
-# operational_configuration.shift_interval = [07:00:00, 19:00:00]
+# operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 # operational_configuration.break_interval = [11:00:00, 12:00:00]
 # operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 # operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -237,7 +237,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 id = "OP-08-001"
 resources.resources = [ "MTN-ROPE"]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -246,7 +246,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 # id = "OP-08-002"
 # resources.resources = [ "MTN-ROPE"]
 # hours_per_day = 6.0
-# operational_configuration.shift_interval = [07:00:00, 19:00:00]
+# operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 # operational_configuration.break_interval = [11:00:00, 12:00:00]
 # operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 # operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -255,7 +255,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 # id = "OP-08-003"
 # resources.resources = [ "MTN-ROPE"]
 # hours_per_day = 6.0
-# operational_configuration.shift_interval = [07:00:00, 19:00:00]
+# operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 # operational_configuration.break_interval = [11:00:00, 12:00:00]
 # operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 # operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -264,7 +264,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 # id = "OP-08-004"
 # resources.resources = [ "MTN-ROPE"]
 # hours_per_day = 6.0
-# operational_configuration.shift_interval = [07:00:00, 19:00:00]
+# operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 # operational_configuration.break_interval = [11:00:00, 12:00:00]
 # operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 # operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -277,7 +277,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 id = "OP-09-001"
 resources.resources = [ "MTN-SCAF"]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -286,7 +286,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 id = "OP-09-002"
 resources.resources = [ "MTN-SCAF"]
 hours_per_day = 6.0
-operational_configuration.shift_interval = [07:00:00, 19:00:00]
+operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 operational_configuration.break_interval = [11:00:00, 12:00:00]
 operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -295,7 +295,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 # id = "OP-09-003"
 # resources.resources = [ "MTN-SCAF"]
 # hours_per_day = 6.0
-# operational_configuration.shift_interval = [07:00:00, 19:00:00]
+# operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 # operational_configuration.break_interval = [11:00:00, 12:00:00]
 # operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 # operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -304,7 +304,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 # id = "OP-09-004"
 # resources.resources = [ "MTN-SCAF"]
 # hours_per_day = 6.0
-# operational_configuration.shift_interval = [07:00:00, 19:00:00]
+# operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 # operational_configuration.break_interval = [11:00:00, 12:00:00]
 # operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 # operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -317,7 +317,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 # id = "OP-10-001"
 # resources.resources = [ "INP-SITE"]
 # hours_per_day = 6.0
-# operational_configuration.shift_interval = [07:00:00, 19:00:00]
+# operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 # operational_configuration.break_interval = [11:00:00, 12:00:00]
 # operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 # operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -326,7 +326,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 # id = "OP-10-002"
 # resources.resources = [ "INP-SITE"]
 # hours_per_day = 6.0
-# operational_configuration.shift_interval = [07:00:00, 19:00:00]
+# operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 # operational_configuration.break_interval = [11:00:00, 12:00:00]
 # operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 # operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -335,7 +335,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 # id = "OP-10-003"
 # resources.resources = [ "INP-SITE"]
 # hours_per_day = 6.0
-# operational_configuration.shift_interval = [07:00:00, 19:00:00]
+# operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 # operational_configuration.break_interval = [11:00:00, 12:00:00]
 # operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 # operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -348,7 +348,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 # id = "OP-11-001"
 # resources.resources = [ "PRODTECH"]
 # hours_per_day = 6.0
-# operational_configuration.shift_interval = [07:00:00, 19:00:00]
+# operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 # operational_configuration.break_interval = [11:00:00, 12:00:00]
 # operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 # operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -357,7 +357,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 # id = "OP-11-002"
 # resources.resources = [ "PRODTECH"]
 # hours_per_day = 6.0
-# operational_configuration.shift_interval = [07:00:00, 19:00:00]
+# operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 # operational_configuration.break_interval = [11:00:00, 12:00:00]
 # operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 # operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -366,7 +366,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 # id = "OP-11-003"
 # resources.resources = [ "PRODTECH"]
 # hours_per_day = 6.0
-# operational_configuration.shift_interval = [07:00:00, 19:00:00]
+# operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 # operational_configuration.break_interval = [11:00:00, 12:00:00]
 # operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 # operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -375,7 +375,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 # id = "OP-11-004"
 # resources.resources = [ "PRODTECH"]
 # hours_per_day = 6.0
-# operational_configuration.shift_interval = [07:00:00, 19:00:00]
+# operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 # operational_configuration.break_interval = [11:00:00, 12:00:00]
 # operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 # operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
@@ -384,7 +384,7 @@ operational_configuration.availability.end_date = 2024-11-17T15:00:00Z
 # id = "OP-11-005"
 # resources.resources = [ "PRODTECH"]
 # hours_per_day = 6.0
-# operational_configuration.shift_interval = [07:00:00, 19:00:00]
+# operational_configuration.off_shift_interval = [19:00:00, 07:00:00]
 # operational_configuration.break_interval = [11:00:00, 12:00:00]
 # operational_configuration.toolbox_interval = [07:00:00, 08:00:00]
 # operational_configuration.availability.start_date = 2024-11-04T07:00:00Z
