--- a/imperium/Cargo.toml
+++ b/imperium/Cargo.toml
@@ -2,6 +2,7 @@
 name = "imperium"
 version = "0.1.0"
 edition = "2021"
+description = "commandline tool for establishing client communications with the ordinator-api server"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
