--- a/data_processing/Cargo.toml
+++ b/data_processing/Cargo.toml
@@ -2,6 +2,8 @@
 name = "data_processing"
 version = "0.2.0"
 edition = "2021"
+description = "Data processing crate for interacting with SAP"
+license-file = "../LICENSE"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
