--- a/imperium/Cargo.toml
+++ b/imperium/Cargo.toml
@@ -3,6 +3,7 @@ name = "imperium"
 version = "0.2.0"
 edition = "2021"
 description = "commandline tool for establishing client communications with the ordinator-api server"
+license-file = "../LICENSE"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
