--- a/shared_types/Cargo.toml
+++ b/shared_types/Cargo.toml
@@ -2,6 +2,8 @@
 name = "shared_types"
 version = "0.2.0"
 edition = "2021"
+description = "Shared types between imperium and scheduling_system"
+license-file = "../LICENSE"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
