--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,7 @@ RUST_BACKTRACE=1
 PROFILING_FILE=./benches/tracing.folded
 RUST_LOG=info
 PROFILING_LEVEL=error
-TRACING_LEVEL=warn
+TRACING_LEVEL=info
 ORDINATOR_LOG_DIR=./logging/logs/
 
 
