--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ OPERATIONAL_THROTTLING=150
 ASSET=DF
 
 # Ordinator
-ORDINATOR_API_ADDRESS=127.0.0.1:8090
+ORDINATOR_API_ADDRESS=0.0.0.0:8090
 ORDINATOR_MAIN_ENDPOINT=/ordinator_endpoint
 ORDINATOR_CORES=2-8
 ORDINATOR_PATH=/home/$USER/ordinator
