--- a/scheduling_system/Cargo.toml
+++ b/scheduling_system/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "scheduling_system"
-version = "0.2.1"
+version = "0.2.2"
 edition = "2021"
 description = "Main binary for the scheduling system"
 license-file = "../LICENSE"
@@ -48,5 +48,6 @@ toml = "*"
 tracing = "*"
 tracing-appender = "*"
 tracing-flame = "*"
+tracing-serde = "0.2"
 tracing-subscriber = { version = "*", features = ["json", "env-filter"] }
 uuid = { version = "*", features = ["v4"] }
