--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,7 @@ ORDINATOR_LOG_DIR=./logging/logs/
 # THESE SETTINGS ARE NOT ENVIRONMENT VARIABLES, DO NOT CHANGE THEM
 # Configuration
 WORK_ORDER_WEIGHTINGS=./configuration/work_order_weight_parameters.json
+CLUSTER_WEIGHTINGS=./configuration/strategic_clustering_parameters.json
 RESOURCE_CONFIG_INITIALIZATION=./configuration/resources_df.toml
 
 #DATA
