--- a/shared_types/Cargo.toml
+++ b/shared_types/Cargo.toml
@@ -17,6 +17,7 @@ chrono-tz = "*"
 clap = { version = "*", features = ["derive"] }
 colored ="*"
 proptest = "*"
+rand = "*"
 regex = "*"
 rust_decimal = "*"
 rust_decimal_macros = "*"
