refactor: moved Agent<StrategicAlgorithm>::run() into common function

--- a/scheduling_system/Cargo.toml
+++ b/scheduling_system/Cargo.toml
@@ -17,6 +17,7 @@ force-frame-pointers = "yes"
 criterion = "0.5"
 
 [dependencies]
+actix-files = "*"
 actix-rt = "*"
 actix-web = "*"
 actix-web-actors = "*"
