refactor: update files from refactor

--- a/imperium/scripts/strategic/resource_configurations/zero_resources.toml
+++ b/imperium/scripts/strategic/resource_configurations/zero_resources.toml
@@ -16,5 +16,5 @@ operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:0
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
-operational_configuration.availability.end_date = "2025-01-27T15:00:00Z"
+operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
 
