--- a/configuration/resources_test.toml
+++ b/configuration/resources_test.toml
@@ -16,7 +16,7 @@ operational_configuration.off_shift_interval = { start = "19:00:00",  end = "07:
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
-operational_configuration.availability.end_date = "2025-01-27T15:00:00Z"
+operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
 
 [[operational]]
 id = "OP-01-002"
@@ -26,7 +26,7 @@ operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:0
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
-operational_configuration.availability.end_date = "2025-01-27T15:00:00Z"
+operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
 
 [[operational]]
 id = "OP-01-003"
@@ -36,4 +36,4 @@ operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:0
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
-operational_configuration.availability.end_date = "2025-01-27T15:00:00Z"
+operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
