--- a/data_processing/Cargo.toml
+++ b/data_processing/Cargo.toml
@@ -8,6 +8,7 @@ license-file = "../LICENSE"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "*"
 atoi = "=1.0.0"
 calamine = "*"
 chrono = { version = "0", features = ["serde", "arbitrary"] }
