--- a/imperium/scripts/strategic/resource_configurations/low_resources.toml
+++ b/imperium/scripts/strategic/resource_configurations/low_resources.toml
@@ -15,7 +15,7 @@ operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:0
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
-operational_configuration.availability.end_date = "2025-01-27T15:00:00Z"
+operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
 
 [[operational]]
 id = "OP-01-002"
@@ -25,7 +25,7 @@ operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:0
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
-operational_configuration.availability.end_date = "2025-01-27T15:00:00Z"
+operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
 
 ################################
 ###          MTN-INST        ###
@@ -38,7 +38,7 @@ operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:0
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
-operational_configuration.availability.end_date = "2025-01-27T15:00:00Z"
+operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
 
 [[operational]]
 id = "OP-02-002"
@@ -48,7 +48,7 @@ operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:0
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
-operational_configuration.availability.end_date = "2025-01-27T15:00:00Z"
+operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
 
 ################################
 ###          MTN-MECH        ###
@@ -61,7 +61,7 @@ operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:0
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
-operational_configuration.availability.end_date = "2025-01-27T15:00:00Z"
+operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
 
 [[operational]]
 id = "OP-02-002"
@@ -71,7 +71,7 @@ operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:0
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
-operational_configuration.availability.end_date = "2025-01-27T15:00:00Z"
+operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
 
 ################################
 ###          MTN-TURB        ###
@@ -84,7 +84,7 @@ operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:0
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
-operational_configuration.availability.end_date = "2025-01-27T15:00:00Z"
+operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
 
 [[operational]]
 id = "OP-03-002"
@@ -94,7 +94,7 @@ operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:0
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
-operational_configuration.availability.end_date = "2025-01-27T15:00:00Z"
+operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
 
 ################################
 ###          MTN-TELE        ###
@@ -107,7 +107,7 @@ operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:0
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
-operational_configuration.availability.end_date = "2025-01-27T15:00:00Z"
+operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
 
 ################################
 ###          MTN-ROUS        ###
@@ -120,7 +120,7 @@ operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:0
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
-operational_configuration.availability.end_date = "2025-01-27T15:00:00Z"
+operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
 
 [[operational]]
 id = "OP-04-002"
@@ -130,7 +130,7 @@ operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:0
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
-operational_configuration.availability.end_date = "2025-01-27T15:00:00Z"
+operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
 
 
 ################################
@@ -144,7 +144,7 @@ operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:0
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
-operational_configuration.availability.end_date = "2025-01-27T15:00:00Z"
+operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
 
 ################################
 ###          MTN-LAGG        ###
@@ -157,7 +157,7 @@ operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:0
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
-operational_configuration.availability.end_date = "2025-01-27T15:00:00Z"
+operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
 
 
 ################################
@@ -171,7 +171,7 @@ operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:0
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
-operational_configuration.availability.end_date = "2025-01-27T15:00:00Z"
+operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
 
 ################################
 ###          MTN-PIPF        ###
@@ -184,7 +184,7 @@ operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:0
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
-operational_configuration.availability.end_date = "2025-01-27T15:00:00Z"
+operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
 [[operational]]
 id = "OP-07-002"
 resources.resources = [ "MTN-PIPF"]
@@ -193,7 +193,7 @@ operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:0
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
-operational_configuration.availability.end_date = "2025-01-27T15:00:00Z"
+operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
 
 ################################
 ###          MTN-ROPE        ###
@@ -206,7 +206,7 @@ operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:0
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
-operational_configuration.availability.end_date = "2025-01-27T15:00:00Z"
+operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
 [[operational]]
 id = "OP-08-002"
 resources.resources = [ "MTN-ROPE"]
@@ -215,7 +215,7 @@ operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:0
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
-operational_configuration.availability.end_date = "2025-01-27T15:00:00Z"
+operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
 
 ################################
 ###          MTN-SCAF        ###
@@ -228,7 +228,7 @@ operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:0
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
-operational_configuration.availability.end_date = "2025-01-27T15:00:00Z"
+operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
 [[operational]]
 id = "OP-09-002"
 resources.resources = [ "MTN-SCAF"]
@@ -237,7 +237,7 @@ operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:0
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
-operational_configuration.availability.end_date = "2025-01-27T15:00:00Z"
+operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
 
 ################################
 ###          INP-SITE        ###
@@ -250,7 +250,7 @@ operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:0
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
-operational_configuration.availability.end_date = "2025-01-27T15:00:00Z"
+operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
 [[operational]]
 id = "OP-10-002"
 resources.resources = [ "INP-SITE"]
@@ -259,7 +259,7 @@ operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:0
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
-operational_configuration.availability.end_date = "2025-01-27T15:00:00Z"
+operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
 
 ################################
 ###          PRODTECH        ###
@@ -272,7 +272,7 @@ operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:0
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
-operational_configuration.availability.end_date = "2025-01-27T15:00:00Z"
+operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
 [[operational]]
 id = "OP-11-002"
 resources.resources = [ "PRODTECH"]
@@ -281,7 +281,7 @@ operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:0
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
-operational_configuration.availability.end_date = "2025-01-27T15:00:00Z"
+operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
 [[operational]]
 id = "OP-11-003"
 resources.resources = [ "PRODTECH"]
@@ -290,7 +290,7 @@ operational_configuration.off_shift_interval = { start = "19:00:00", end = "07:0
 operational_configuration.break_interval = { start = "11:00:00", end = "12:00:00" }
 operational_configuration.toolbox_interval = { start = "07:00:00", end = "08:00:00" }
 operational_configuration.availability.start_date = "2025-01-13T07:00:00Z"
-operational_configuration.availability.end_date = "2025-01-27T15:00:00Z"
+operational_configuration.availability.finish_date = "2025-01-27T15:00:00Z"
 
 # mtnelec = 3.5
 # mtninst = 2.5
