--- a/static_files/scheduler/package.json
+++ b/static_files/scheduler/package.json
@@ -42,10 +42,16 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "msw": "^2.7.3",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.0.8",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.24.1",
     "vite": "^6.1.1"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
