--- a/crates/shared_types/Cargo.toml
+++ b/crates/shared_types/Cargo.toml
@@ -18,6 +18,7 @@ colored ="*"
 proptest = "*"
 rand = "*"
 regex = "*"
+rgb = "*"
 rust_decimal = "*"
 rust_decimal_macros = "*"
 rust_xlsxwriter = "*"
